--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Cathy Tukei
 logo: /assets/img/headshot_circle.png
 description: text below image
+show_downloads: true
 theme: jerkyll-theme-minimal
 
