--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Cathy Tukei
 logo: /assets/img/headshot_circle.png
 description: text below image
 show_downloads: true
-theme: jerkyll-theme-minimal
+theme: jerkyll-theme-minima
 
