--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Cathy Tukei
-logo: assets/Better.jpg
+logo: assets/img/headshot_circle.png
 description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
